tests/ui/impl-trait/issue-99073.stderr
error[E0792]: expected generic lifetime parameter, found `'_`
  --> $DIR/issue-99073.rs:6:13
   |
LL |     move || f(fix(&f))
   |             ^^^^^^^^^^ this generic parameter must be used with a generic lifetime parameter

error: concrete type differs from previous defining opaque type use
  --> $DIR/issue-99073.rs:6:15
   |
LL |     move || f(fix(&f))
   |               ^^^^^^^ expected `{closure@$DIR/issue-99073.rs:6:5: 6:12}`, got `G`
   |
note: previous use here
  --> $DIR/issue-99073.rs:5:36
   |
LL | fn fix<F: Fn(G), G: Fn()>(f: F) -> impl Fn() {
   |                                    ^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0792`.
